[package]
name = "ptv-departure-lambda"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.2"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.95"
serde = "1.0.159"
lambda_runtime = "0.7.3"
reqwest = { version = "0.11.16", features = ["json"] }
openssl = { version = "0.10.49", features = ["vendored"] } # use vendored ssl for musl linux builds
hmac-sha1 = "0.1.3"
config = "0.13.3"
chrono = "0.4.24"
mockito = "1.0.2"
